# minzo

./: .editorconfig  .gitignore  README.md  mypy.ini  nx.json  package.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml  coverage.yml
apps/minzo/: project.json  vite.config.mts
apps/minzo-e2e/: playwright.config.ts  project.json
apps/minzo/src/: index.html
apps/minzo/src/app/: app.spec.ts  app.ts  nx-welcome.ts
services/: pyproject.toml  tox.ini
services/src/minzo/: app.py
src/dashboard/: app.py
src/dashboard/static/src/: input.css
src/dashboard/templates/: _base.html  accordion.html  carousel.html  collapse.html  datepicker.html  dial.html  dismiss.html  drawer.html  dropdown.html  index.html  input-counter.html  modal.html  popover.html  tabs.html  tooltip.html
src/hello/: main.py
